# pedis-core

./: Cargo.toml  LICENSE.txt
src/: lib.rs
