[package]
name    = "pedis-core"
version = "0.0.2"
edition = "2021"
authors = ["Pathe <pathe.sene@gmail.com>"]
rust-version = "1.78"
description = "Provides the core trait for a hobby redis server"
readme = "README.md"
repository = "https://github.com/papepathe/pedis-core"
license = "MIT"
license-file = "LICENSE.txt"
keywords = ["redis", "resp-protocol"]

[dependencies]
